Fixed horizontal non-alignment for Asciidoc's labeled lists

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -132,3 +132,9 @@ input.gsc-search-button-v2 {
     padding: inherit !important;
   }
 }
+
+/* Fixes bad alignment in Asciidoc's [horizontal] labeled lists */
+td > p {
+   font-size:1em;
+   line-height: 1.42857143;
+}
